--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ cache: pip
 install:
   - pip install -r requirements.txt
 
+before_install: cd project
+
 script:
   - python test_base.py
 # command to run tests
