--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache: pip
 install:
   - pip install -r requirements.txt
 
-before_install: cd tests
+before_script: cd tests
 
 script:
   - python test_base.py
