--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: python
+
 python:
   - "3.6"
+
 cache: pip
+
 install:
   - pip install -r requirements.txt
+  - pip install codecov
 
 env:
   -CODECOV_TOKEN="9c1280d3-80a6-4aaa-9538-10ff0aa7099d"
@@ -12,3 +16,7 @@ before_script: cd tests
 
 script:
   - python test_base.py
+  - coverage run tests.py
+
+after_success:
+  - codecov
