--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_script: cd tests
 
 script:
   - python test_base.py
+  - python test_utils.py
   - coverage run test_base.py
 
 after_success:
